update đăng ký, nhập user và pass đúng vẫn báo lỗi

--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
   <link rel="icon" href="./assets/favicon.png">
   <script src="./scripts/login.js" defer></script>
   <script src="https://kit.fontawesome.com/55973b77b0.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -54,27 +55,21 @@
           </div> -->
           <div data-testid="login-form">
             <div class="UXQuB pad16">
-              <div class="dUvQaU">
-                <label for="login-username" class="Label-sc-1c0cv3r-0 jhxAUN">
-                  Email address or username</label>
-              </div>
-              <input aria-invalid="false" id="login-username" type="text" placeholder="Email address or username"
-                data-testid="login-username" autocapitalize="off" class="Input-sc-1gbx9xe-0 iFfIqr" value="" />
+                <div class="dUvQaU">
+                    <label for="login-email" class="Label-sc-1c0cv3r-0 jhxAUN">Email address or username</label>
+                </div>
+                <input aria-invalid="false" id="login-email" type="text" placeholder="Email address or username" data-testid="login-email" autocapitalize="off" class="Input-sc-1gbx9xe-0 iFfIqr" value="" />
             </div>
             <div class="UXQuB pad16">
-              <div class="dUvQaU">
-                <label for="login-password" class="Label-sc-1c0cv3r-0 jhxAUN">Password</label>
-              </div>
-              <input aria-invalid="false" id="login-password" type="password" placeholder="Password"
-                data-testid="login-password" class="Input-sc-1gbx9xe-0 iFfIqr" />
+                <div class="dUvQaU">
+                    <label for="login-password" class="Label-sc-1c0cv3r-0 jhxAUN">Password</label>
+                </div>
+                <input aria-invalid="false" id="login-password" type="password" placeholder="Password" data-testid="login-password" class="Input-sc-1gbx9xe-0 iFfIqr" />
             </div>
-            <a id="reset-password-link" data-testid="reset-password-link" class="Link-k8gsk-0 dvVOBw">Forgot your
-              password?</a>
-
-          </div>
-          <div class="btn--kliye">
+        </div>
+        <div class="btn--kliye">
             <button class="btn--hunre" onclick="login()">LOG IN</button>
-          </div>
+        </div>
           <hr class="gjuJVb" />
           <div id="sign-up-section" data-testid="signup-section">
             <p class=" izDpgk sc-furwcr kosEEf">
@@ -91,7 +86,6 @@
       </div>
     </div>
   </div>
-  <script src="https://kit.fontawesome.com/55973b77b0.js" crossorigin="anonymous"></script>
 
 </body>
 
