--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
 
 
-          
+
           <section class="feedPlaylist"></section>
           <section class="feedPlaylist"></section>
           <section class="feedPlaylist"></section>
@@ -228,38 +228,45 @@
 
           <div class="footer">
             <div class="first-footer">
-                <div class="infor">
-                    <p><b>Company</b></p>
-                    <a href="">About</a> <br><p></p>
-                    <a href="">Jobs</a> <br><p></p>
-                    <a href="">For the record</a>
-                </div>
+              <div class="infor">
+                <p><b>Company</b></p>
+                <a href="">About</a> <br>
+                <p></p>
+                <a href="">Jobs</a> <br>
+                <p></p>
+                <a href="">For the record</a>
+              </div>
 
-                <div class="infor">
-                    <p><b>Communities</b></p>
-                    <a href="">For artists</a> <br><p></p>
-                    <a href="">Developers</a> <br><p></p>
-                    <a href="">Advertising</a> <br><p></p>
-                    <a href="">Investor</a> <br><p></p>
-                </div>
+              <div class="infor">
+                <p><b>Communities</b></p>
+                <a href="">For artists</a> <br>
+                <p></p>
+                <a href="">Developers</a> <br>
+                <p></p>
+                <a href="">Advertising</a> <br>
+                <p></p>
+                <a href="">Investor</a> <br>
+                <p></p>
+              </div>
 
-                <div class="infor">
-                    <p><b>Useful links</b></p>
-                    <a href="">Support</a> <br><p></p>
-                    <a href="">Free Moblile App</a>
-                </div>
+              <div class="infor">
+                <p><b>Useful links</b></p>
+                <a href="">Support</a> <br>
+                <p></p>
+                <a href="">Free Moblile App</a>
+              </div>
             </div>
             <div class="line-break"></div>
 
             <div class="second-footer">
-                <a href="">Legal</a>
-                <a href="">Privacy Center</a>
-                <a href="">Privacy Policy</a>
-                <a href="">Cookies</a>
-                <a href="">About Ads</a>
-                <a href="">Accessibility</a>
+              <a href="">Legal</a>
+              <a href="">Privacy Center</a>
+              <a href="">Privacy Policy</a>
+              <a href="">Cookies</a>
+              <a href="">About Ads</a>
+              <a href="">Accessibility</a>
 
-                <p>© 2023 Spotify AB</p>
+              <!-- <p>© 2023 Spotify AB</p> -->
             </div>
           </div>
 
@@ -269,10 +276,26 @@
 
 
     <div id="mobiPlay">
-      <button type="button" id="mobibtn"><svg role="img" height="24" width="24" viewBox="0 0 24 24">
+      <div id="musicaPlay">
+        <img src="./assets/playlistImage/celestial.jpg" alt="Song Image" class="song-image">
+        <div class="song-details">
+          <p class="song-name">Celestial</p>
+          <p class="author">Ed Shreeran</p>
+        </div>
+      </div>
+
+
+      <!-- <button type="button" id="mobibtn"><svg role="img" height="24" width="24" viewBox="0 0 24 24">
+          <path d="M7.05 3.606l13.49 7.788a.7.7 0 010 1.212L7.05 20.394A.7.7 0 016 19.788V4.212a.7.7 0 011.05-.606z">
+          </path>
+        </svg></button> -->
+
+      <button type="button" class="btn playPause" style="background: white;
+        border-radius: 50%;"><svg role="img" height="24" width="24" viewBox="0 0 24 24">
           <path d="M7.05 3.606l13.49 7.788a.7.7 0 010 1.212L7.05 20.394A.7.7 0 016 19.788V4.212a.7.7 0 011.05-.606z">
           </path>
         </svg></button>
+
     </div>
 
 
@@ -299,8 +322,8 @@
                 </svg>Home</a>
             </li>
             <li class="nav-item">
-              <a href="search.html" class="nav-link d-flex flex-column align-items-center"><svg role="img" height="20" width="20"
-                  fill="white" viewBox="0 0 24 24">
+              <a href="search.html" class="nav-link d-flex flex-column align-items-center"><svg role="img" height="20"
+                  width="20" fill="white" viewBox="0 0 24 24">
                   <path
                     d="M10.533 1.279c-5.18 0-9.407 4.14-9.407 9.279s4.226 9.279 9.407 9.279c2.234 0 4.29-.77 5.907-2.058l4.353 4.353a1 1 0 101.414-1.414l-4.344-4.344a9.157 9.157 0 002.077-5.816c0-5.14-4.226-9.28-9.407-9.28zm-7.407 9.279c0-4.006 3.302-7.28 7.407-7.28s7.407 3.274 7.407 7.28-3.302 7.279-7.407 7.279-7.407-3.273-7.407-7.28z">
                   </path>
@@ -336,9 +359,8 @@
                 </path>
               </svg></button>
 
-              <!-- onclick="togglePlayPause()" -->
-            <button type="button" class="btn playPause" ><svg role="img" height="24"
-                width="24" viewBox="0 0 24 24">
+            <!-- onclick="togglePlayPause()" -->
+            <button type="button" class="btn playPause"><svg role="img" height="24" width="24" viewBox="0 0 24 24">
                 <path
                   d="M7.05 3.606l13.49 7.788a.7.7 0 010 1.212L7.05 20.394A.7.7 0 016 19.788V4.212a.7.7 0 011.05-.606z">
                 </path>
@@ -354,7 +376,7 @@
           <div id="barraDeProgresso">
             <small id="currentTime">00:00</small>
             <!-- oninput="updateProgressBar()" -->
-            <input type="range" id="progressSlider" min="0" max="100" value="0" step="1" >
+            <input type="range" id="progressSlider" min="0" max="100" value="0" step="1">
             <small id="duration">00:00</small>
           </div>
 
@@ -386,7 +408,7 @@
 
           <div id="volume">
             <!-- onclick="toggleMute()" -->
-            <button type="button" class="icones outrosDispositivos"  id="button-volume-icon">
+            <button type="button" class="icones outrosDispositivos" id="button-volume-icon">
               <svg role="presentation" height="16" width="16" aria-label="Volume médio" id="volume-icon"
                 viewBox="0 0 16 16">
                 <path id="volume-path"
@@ -395,7 +417,7 @@
               </svg>
             </button>
             <!-- oninput="changeVolume()" -->
-            <input type="range" id="volume-slider" class="button-volume-range" min="0" max="1" step="0.1" value="1" >
+            <input type="range" id="volume-slider" class="button-volume-range" min="0" max="1" step="0.1" value="1">
           </div>
 
         </div>
@@ -404,7 +426,7 @@
 
 
         <!-- Thêm thẻ audio để phát file mp3 -->
-        <audio id="audioPlayer" class="d-none" controls >
+        <audio id="audioPlayer" class="d-none" controls>
           <!-- Trình duyệt không hỗ trợ thẻ audio. -->
           <source id="audioSource" type="audio/mp3">
           Your browser does not support the audio element.
