--- a/signup.html
+++ b/signup.html
@@ -177,6 +177,7 @@
       var json = JSON.stringify(accounts);
       localStorage.setItem("accounts", json);
       alert("Đăng ký thành công! Chào mừng bạn, " + lastName);
+      localStorage.setItem('userName', lastName);
       window.location.href = "index.html";
     }
   </script>
