--- a/login.html
+++ b/login.html
@@ -75,7 +75,7 @@
             <p class=" izDpgk sc-furwcr kosEEf">
               Don't have an account?
             </p>
-            <button data-testid="facebook-login" class="hpTULc kiLgbd">
+            <button data-testid="facebook-login" class="hpTULc kiLgbd" onclick="window.location.href='signup.html'">
               <p class=" buttons eKDPqH hctigt kjwvkn">
                 SIGN UP FOR SPOTIFY
                 <br>
