--- a/index.html
+++ b/index.html
@@ -392,13 +392,13 @@
               </path>
             </svg></button>
 
-          <button type="button" class="icones lista"><svg role="img" height="16" width="16" viewBox="0 0 16 16">
+          <button type="button" class="icones lista"><svg onClick="enabledisable(this)" role="img" height="16" width="16" viewBox="0 0 16 16">
               <path
                 d="M15 15H1v-1.5h14V15zm0-4.5H1V9h14v1.5zm-14-7A2.5 2.5 0 013.5 1h9a2.5 2.5 0 010 5h-9A2.5 2.5 0 011 3.5zm2.5-1a1 1 0 000 2h9a1 1 0 100-2h-9z">
               </path>
             </svg></button>
 
-          <button type="button" class="icones outrosDispositivos"><svg role="img" height="16" width="16"
+          <button type="button" class="icones outrosDispositivos"><svg onClick="enabledisable(this)" role="img" height="16" width="16"
               aria-label="Conectar a um dispositivo" viewBox="0 0 16 16">
               <path
                 d="M6 2.75C6 1.784 6.784 1 7.75 1h6.5c.966 0 1.75.784 1.75 1.75v10.5A1.75 1.75 0 0114.25 15h-6.5A1.75 1.75 0 016 13.25V2.75zm1.75-.25a.25.25 0 00-.25.25v10.5c0 .138.112.25.25.25h6.5a.25.25 0 00.25-.25V2.75a.25.25 0 00-.25-.25h-6.5zm-6 0a.25.25 0 00-.25.25v6.5c0 .138.112.25.25.25H4V11H1.75A1.75 1.75 0 010 9.25v-6.5C0 1.784.784 1 1.75 1H4v1.5H1.75zM4 15H2v-1.5h2V15z">
@@ -436,7 +436,7 @@
   </div>
 
   <!-- <script src="./scripts/script.js"></script> -->
-  <script src="./scripts/render.js"></script>
+  <script src="./scripts/script.js"></script>
 </body>
 
 </html>
