--- a/search.html
+++ b/search.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   <!-- <script src="./scripts/script.js" defer></script> -->
   <script src="./scripts/dropdown.js" defer></script>
-  <script src="./scripts/search2.js" defer></script>
+  <script src="./scripts/search.js" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 </head>
 
