change icon path

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login or Sign Up</title>
   <link rel="stylesheet" href="./styles/login.css">
-  <link rel="icon" href="./assets/favicon.png">
+  <link rel="icon" href="./assets/icon/favicon.png">
   <script src="./scripts/login.js" defer></script>
   <script src="https://kit.fontawesome.com/55973b77b0.js" crossorigin="anonymous"></script>
 
