--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
   <title>Login or Sign Up</title>
   <link rel="stylesheet" href="./styles/login.css">
   <link rel="stylesheet" href="./styles/signup.css">
-  <link rel="icon" href="./assets/favicon.png">
+  <link rel="icon" href="./assets/icon/favicon.png">
 
 </head>
 
